added recursive image downloader