@@ -6,54 +6,50 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
-
+import java.net.URL;
 
 import com.sun.imageloader.downloader.api.ImageRetriever;
 
-public class ImageDownloader implements ImageRetriever {
+//ImageDownloader HTTPImageStreamRereiever
+public class ImageDownloader implements ImageRetriever{
 
-	protected final URI _imageUri;
-	
-	protected final int _maxRedirectCount;
-	protected final int _maxTimeOut;
-	protected final int _maxReadTimeOut;
+	private int _maxTimeOut;
+	private int _maxReadTimeOut;
+	private final int _maxRedirectCount;
+	private static final int REDIRECT_CODE = 3;
+	private static final String  LOCATION = "Location";
 	protected final static int BUFFER_SIZE = 16 * 1024;
 
-	
-	public ImageDownloader(URI imageUr_, int maxRedirectCount_, int maxTimeOut_, int maxReadTimeOut_){
-		_imageUri = imageUr_;
-		_maxRedirectCount = maxRedirectCount_;
-	    _maxTimeOut =	maxTimeOut_ ;
-	    _maxReadTimeOut = maxReadTimeOut_;
-	}
-
-	
-	@Override
-	public InputStream getStream(URI imageUr_) throws URISyntaxException, IOException {
-	
-		return getImageFromNetwork(imageUr_);
-	}
-
-	private InputStream getImageFromNetwork(URI imageUri_) throws URISyntaxException, IOException {
-
-		HttpURLConnection imageUrlConn = openConnection(imageUri_);
-		int redirectionCount= 0;
-		while(redirectionCount < _maxRedirectCount && imageUrlConn.getResponseCode() / 100 == 3 ){
-			imageUrlConn = openConnection(new URI (imageUrlConn.getHeaderField("Location")));
-		}	
-		imageUrlConn.connect();
-		
-		return new BufferedInputStream(imageUrlConn.getInputStream(), BUFFER_SIZE);
-		
+	public ImageDownloader(int maxTimeOut_, int maxReadTimeOut_, int maxRedirectCount_) {
+		_maxTimeOut = maxTimeOut_;
+		_maxReadTimeOut = maxReadTimeOut_;
+		_maxRedirectCount =maxRedirectCount_;
 	}
 	
-	protected HttpURLConnection openConnection(URI imageUri_) throws IOException, URISyntaxException{
-		
-		HttpURLConnection imageUrlConn = (HttpURLConnection) imageUri_.toURL().openConnection();
+	private InputStream getInputStream(URL imageUrl_, int redirectCount_) throws IOException{
+		HttpURLConnection imageUrlConnection = openConnection(imageUrl_);
+		imageUrlConnection.connect();
+		if((redirectCount_ < _maxRedirectCount )&& (imageUrlConnection.getResponseCode() / 100) == REDIRECT_CODE){
+			getInputStream(new URL(imageUrlConnection.getHeaderField(LOCATION)),redirectCount_++);
+		}
+		return new BufferedInputStream(imageUrlConnection.getInputStream(), BUFFER_SIZE);
+	}
+	
+    private HttpURLConnection openConnection(URL imageUrl_) throws IOException{
+    	HttpURLConnection imageUrlConn = (HttpURLConnection) imageUrl_.openConnection();
 		imageUrlConn.setConnectTimeout(_maxTimeOut);
-		imageUrlConn.setReadTimeout(_maxReadTimeOut);
-		return imageUrlConn;
-				
+    	imageUrlConn.setReadTimeout(_maxReadTimeOut);
+    	return imageUrlConn;
+    }
+
+
+	@Override
+	public InputStream getStream(URI imageUr_) throws URISyntaxException,
+			IOException {
+		return getInputStream(imageUr_.toURL(), _maxRedirectCount);
 	}
+
+
+
 
 }
